<resources>
    <string name="app_name">Product Tracker</string>
    <string name="empty_stock_text">Your stock is empty.</string>
    <string name="empty_stock_todo">To add a product, touch the + icon.</string>
    <string name="add_menu_item_title">Add a new product</string>
    <string name="save_menu_item_title">Save product</string>
    <string name="update_menu_item_title">Update product</string>
    <string name="order_menu_item_title">Order product</string>
    <string name="delete_menu_item_title">Delete product</string>
    <string name="delete_all_menu_item_title">Delete all products</string>
    <string name="sale_button_text">Sale</string>
    <string name="on_stock_text">On stock:</string>
    <string name="euro_sign">€</string>
    <string name="price_ending">,-</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="product_image_text">Product image</string>
    <string name="label_product_name">Product name</string>
    <string name="label_product_description">Product description</string>
    <string name="label_product_quantity">Product quantity</string>
    <string name="label_product_price">Product price:</string>
    <string name="pieces">pieces</string>
    <string name="upload_button_text">Upload image</string>
    <string name="insert_success_text">Product inserted</string>
    <string name="insert_failure_text">Product insert failed</string>
    <string name="update_success_text">Product updated</string>
    <string name="update_failure_text">Product update failed</string>
    <string name="delete_all_success_text">All products deleted</string>
    <string name="delete_success_text">Product deleted</string>
    <string name="delete_failure_text">Delete failed</string>
    <string name="edit_product">Edit product</string>
    <string name="catalog_activity_title">Your products</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="order_title">Product order</string>
    <string name="order_greeting">Dear Mr. Dealer!</string>
    <string name="order_text">I would like to order the following:</string>
    <string name="order_quantity_text">***QUANTITY***</string>
    <string name="order_thank_you">Thank you for your cooperation</string>
    <string name="sale_success_text">Product sold</string>
    <string name="sale_failure_text">Product not sold</string>
    <string name="discard_changes_text">Discard your changes and quit editing?</string>
    <string name="discard_changes_yes">Discard</string>
    <string name="discard_changes_no">Keep Editing</string>
    <string name="no_image_text">No image</string>
</resources>
